<resources>
    <string name="app_name">Jianji</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Github@MSTAT-Lseng</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Bookkeeping</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_setup">Accounting settings</string>
    <string name="add_a_bill">Add a bill</string>
    <string name="edit_bill">Edit Bill</string>
    <string name="amount">Amount $</string>
    <string name="placeholder">Please enter…</string>
    <string name="income_statement">Income statement</string>
    <string name="deposit">Deposit</string>
    <string name="add_notes">Add text notes</string>
    <string name="db_default_wallet">Default Wallet</string>
    <string name="food">food</string>
    <string name="transportation">transportation</string>
    <string name="entertainment">entertainment</string>
    <string name="housing">housing</string>
    <string name="daily_necessities">daily necessities</string>
    <string name="education">education</string>
    <string name="medical">medical</string>
    <string name="pet">pet</string>
    <string name="others">others</string>
    <string name="add_billing_photos">Add photos to your bill</string>
    <string name="finish_billing_btn">Add a bill</string>
    <string name="choose_wallet">Choose a wallet</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="selected_photos_number">%d images selected</string>
    <string name="permissions_failed">Permissions not granted by the user.</string>
    <string name="take_photo">Take photo</string>
    <string name="clear_photo_tips">To reset the selected photos, long press.</string>
    <string name="deposit_selected_hint_title">Deposit bill reminder</string>
    <string name="deposit_selected_hint_message">The deposit bill needs to meet the following conditions:\n1. The payment has been made but the actual consumption has not yet been made;\n2. The deposit can be fully or partially refunded.\n\nThe deposit bill needs to set the actual consumption date, and the actual consumption date must be at least one day later than the payment date;\nThe deposit bill does not support modification.</string>
    <string name="deposit_ok">I understand</string>
    <string name="deposit_never_show">Don\'t show again</string>
    <string name="deposit_date">The deposit will be actually consumed on %s</string>
    <string name="create_billing_time_check_failed">The billing date cannot be a future date</string>
    <string name="create_billing_deposit_time_check_failed">The actual payment date of the deposit is at least one day later than the billing date</string>
    <string name="create_billing_amount_check_failed">The amount cannot be less than 0</string>
    <string name="create_billing_iotype_check_failed">Income/Expense Check Error</string>
    <string name="create_billing_classify_check_failed">Classification check error</string>
    <string name="create_billing_deposit_tag_check_failed">Deposit sign check error</string>
    <string name="create_billing_wallet_check_failed">Wallet ID check error</string>
    <string name="create_billing_unknown_error">An unknown error occurred while creating the bill. Error code: %d</string>
    <string name="store_photos_failed">Failed to save selected photos. Some images may be lost.</string>
    <string name="create_billing_check_failed">The billing information does not meet the preset requirements: </string>
    <string name="create_billing_insert_failed">An unknown error occurred while inserting the bill: </string>
    <string name="create_billing_deposit_insert_failed">An unknown error occurred while inserting the deposit invoice: </string>
    <string name="create_billing_failed">Failed to create bill</string>
    <string name="billing_alert_okay">OK</string>
    <string name="classify_icon">Category Icon</string>
    <string name="unknown_wallet">Unknown wallet</string>
    <string name="inconsistent_array_lengths">Inconsistent array lengths</string>
    <string name="billing_info">Billing Info</string>
    <string name="edit">Edit</string>
    <string name="collect">Collect</string>
    <string name="delete">Delete</string>
    <string name="cannot_swipe_to_future">Cannot switch to a future date</string>
    <string name="cannot_swipe_to_ancient">Cannot switch to before 1970</string>
    <string name="calendar_billing_empty_title">No bills for today</string>
    <string name="calendar_billing_empty_desc">Click the lower right corner to make a note.</string>
    <string name="expenditure">Expenditure</string>
    <string name="income">Income</string>
    <string name="realtime_pay">Real-time payments</string>
    <string name="deposit_pay">Prepayment deposit</string>
    <string name="deposit_consumption">Actual consumption</string>
    <string name="bill_time">Billing time</string>
    <string name="copy_to_clipboard">Content copied to clipboard</string>
    <string name="wallet">Wallet</string>
    <string name="notes">Notes</string>
    <string name="add_picture_notes">Added photo description</string>
    <string name="picture_view_number">%s images</string>
    <string name="finish_activity">Return to previous page</string>
    <string name="updated_billing_items">%d billing items updated</string>
    <string name="delete_billing">Delete bill</string>
    <string name="delete_billing_hint">The wallet balance will be restored. If it is a deposit bill, the related actual consumption bill will also be deleted.</string>
    <string name="delete_billing_failed">Failed to delete bill</string>
    <string name="wallet_manage">Wallet Management</string>
    <string name="wallet_manage_summary">Add/modify wallet, set default wallet.</string>
    <string name="scheduled_plan">Scheduled plan</string>
    <string name="scheduled_plan_summary">Set date cycle to automatically add bill records.</string>
    <string name="collect_billing">Favorite bill</string>
    <string name="collect_billing_summary">View and manage your favorite bills.</string>
    <string name="wallet_management">Wallet Management</string>
    <string name="edit_deposit_date">Modify the actual consumption date</string>
    <string name="jump_deposit_bill">Go to the deposit bill page</string>
    <string name="select_actual_consumption_date">Select the actual consumption date</string>
    <string name="modify_billing_deposit_pay_date_check_failed">Check for errors</string>
    <string name="modify_billing_deposit_pay_date_id_failed">Billing ID does not exist</string>
    <string name="modify_billing_deposit_pay_date_type_failed">Not a deposit bill</string>
    <string name="modify_billing_deposit_pay_date_consumption_id_failed">The actual consumption bill was not found</string>
    <string name="modify_billing_deposit_pay_date_time_check_failed">@string/create_billing_deposit_time_check_failed</string>
    <string name="modify_billing_deposit_pay_date_update_failed">Update failed</string>
    <string name="modify_billing_deposit_pay_date_unknown_failed">An unknown error occurred while updating</string>
    <string name="modify_deposit_pay_date_success">Modify the actual consumption date successfully</string>
    <string name="wallet_amount">Balance: %s</string>
    <string name="default_wallet_tag">default</string>
    <string name="rename_wallet_name">Modify wallet name</string>
    <string name="delete_wallet_name">Delete this wallet</string>
    <string name="set_default_wallet">Set as default wallet</string>
    <string name="options">Options</string>
    <string name="add_wallet">Add a wallet</string>
    <string name="nav_title">%s %s</string>
    <string name="billing_not_found">No billing information found</string>
    <string name="change_wallet_balance">Change Balance</string>
    <string name="wallet_name_empty">Wallet name cannot be empty</string>
    <string name="wallet_name_exists">The wallet name already exists</string>
    <string name="add_wallet_success">Add wallet successfully</string>
    <string name="add_wallet_hint">Please enter a wallet name</string>
    <string name="wallet_selector_default">(Default unchanged)</string>
    <string name="input_new_name">Enter New Name</string>
    <string name="rename_wallet_success">Changed wallet name successfully</string>
    <string name="input_new_balance">Enter balance (negative numbers supported)</string>
    <string name="invalid_balance">Wrong amount, please re-enter</string>
    <string name="change_wallet_balance_success">Modify wallet balance successfully</string>
    <string name="change_wallet_balance_failed">An unknown error occurred while modifying the wallet balance</string>
    <string name="set_default_wallet_success">Set the default wallet successfully</string>
    <string name="set_default_wallet_failed">Failed to set default wallet</string>
    <string name="delete_wallet_message">Do you want to delete this wallet? All bills belonging to this wallet will be transferred to the default wallet.</string>
    <string name="transfer_balance_checkbox">Transfer remaining balance to default wallet</string>
    <string name="delete_wallet">Deleting a wallet</string>
    <string name="delete_wallet_success">Delete wallet successfully</string>
    <string name="delete_wallet_failed">Unknown error occurred while deleting wallet</string>
    <string name="selected_items">%d items selected</string>
    <string name="delete_billings">Delete bill</string>
    <string name="loading">loading …</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="delete_billings_message">Are you sure you want to delete these bills? Deposit bills/actual consumption bills will be deleted together.</string>
    <string name="deposit_bill">Deposit</string>
    <string name="consumption_bill">Actual consumption</string>
    <string name="manual_date_selection">Manual date selection</string>
    <string name="select_date_dialog">Select Date</string>
    <string name="favorite_billings">Favorite bills</string>
    <string name="cancel_collect">Remove from favorites</string>
    <string name="collect_success">Successfully added</string>
    <string name="collect_failed">Collection failed</string>
    <string name="cancel_collect_success">Successfully canceled the collection</string>
    <string name="cancel_collect_failed">Failed to cancel collection</string>
    <string name="no_collect_billing">You haven\'t saved any bills yet.</string>
    <string name="favorite_billing_delete_empty">Long press to select the item to be uncollected.</string>
    <string name="favorite_billing_delete_title">Remove from favorites</string>
    <string name="favorite_billing_delete_message">Do you want to remove these items from your collection? Removing these items from your collection will not delete your bill.</string>
    <string name="favorite_billing_delete_success">Cancel the collection bill successfully</string>
    <string name="favorite_billing_delete_failed">Failed to cancel collection of some bills</string>
    <string name="loading_more">Load More</string>
    <string name="no_more">No more</string>
    <string name="scheduled_plan_title">Add fixed period accounting</string>
    <string name="scheduled_plan_details_summary">Automatically add bills on monthly payday, rent day, and weekly expense day.</string>
    <string name="no_items">No entries yet</string>
    <string name="add">Add</string>
    <string name="add_scheduled_plan">Add a scheduled plan</string>
    <string name="week_scheduled">Weekly Plan</string>
    <string name="month_scheduled">Monthly Plan</string>
</resources>