<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        android:theme="@style/Theme.简记.AppBarOverlay" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/scheduled_plan"
            app:navigationIcon="@drawable/arrow_back"
            app:popupTheme="@style/Theme.简记.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/scheduled_plan_icon"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/scheduled_plan_title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:gravity="center"
                android:text="@string/scheduled_plan_details_summary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/list_container"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/no_items_container"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingTop="32dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/no_items" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:text="@string/add"
                    android:id="@+id/add_item_button"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nav_bar_height" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>